# alacritty

./: .gitignore  README.md  shell.nix
alacritty/: build.rs
alacritty/src/: cli.rs  migrate.rs  string.rs
alacritty/src/config/: ui_config.rs
alacritty/src/renderer/: mod.rs
alacritty_config_derive/tests/: config.rs
alacritty_macos/: Cargo.toml
alacritty_terminal/: Cargo.toml
alacritty_terminal/src/config/: mod.rs
alacritty_terminal/src/tty/: mod.rs  unix.rs
alacritty_terminal/src/tty/unix/: xembed_tcp_socket.rs
